--- a/custom.css
+++ b/custom.css
@@ -299,6 +299,7 @@ ul {
   padding: 20px;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   z-index: 1000; /* Make sure this is higher than the z-index of elements behind the sidebar */
+  color: #4a4a4a; /* Charcoal grey */
 }
 
 .sidebar-section {
@@ -333,7 +334,7 @@ ul {
 
 @media screen and (max-width: 960px) {
   #sidebar {
-    width: 200px; /* Smaller width on smaller screens */
+    width: 200px; /* Smaller width on smaller screens */:
   }
 }
 
